# cover-selector-mvp

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  Dockerfile  GITHUB_PUSH_INSTRUCTIONS.md  LICENSE  Makefile  OPENSOURCE_CHECKLIST.md  README.md  README.zh.md  RELEASE_NOTES_v0.1.0.md  RELIABILITY_REVIEW.json  ROADMAP.md  SECURITY.md  START_HERE.md  app.py  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/plans/: 2026-04-13-001-feat-cover-selector-mvp-plan.md
src/cover_selector/: config.py
src/cover_selector/cli/: main.py
src/cover_selector/configs/: default.yaml
src/cover_selector/core/: __init__.py  analyzer_cache.py  blur_analyzer.py  brightness_analyzer.py  complete_pipeline.py  composer_analyzer.py  composition_analyzer.py  composition_report_builder.py  deduper.py  face_analyzer.py  frame_cache.py  frame_sampler.py  image_compositor.py  image_preprocess.py  memory_optimizer.py  ocr_detector.py  parallel_pipeline.py  parallel_processor.py  ranker.py  report_builder.py  scene_detector.py  scorer.py
src/cover_selector/schemas/: __init__.py  candidate_frame.py  frame_features.py  ranking_result.py  scene.py
src/cover_selector/web/: __init__.py  session_manager.py
static/: app.js  index.html
tests/: test_analyzer_cache_integration.py  test_app_integration.py  test_blur_analyzer.py  test_brightness_analyzer.py  test_cli.py  test_complete_pipeline.py  test_composer_analyzer.py  test_composition_analyzer.py  test_config.py  test_deduper.py  test_face_analyzer.py  test_frame_cache.py  test_frame_sampler.py  test_image_compositor.py  test_image_preprocess.py  test_integration_comprehensive.py  test_integration_end_to_end.py  test_memory_optimization.py  test_parallel_processing.py  test_performance_benchmark.py  test_pipeline_performance.py  test_ranker.py  test_scene_detector.py  test_scorer.py
